--- a/BigData1.html
+++ b/BigData1.html
@@ -140,7 +140,7 @@
                     <img src="js/logo2.png" />
                 </div>
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-                    <h2 style="margin-left: 30px;color:red;">#BIG DATA1</h2>
+                    <h2 style="margin-left: 30px;color:red;">#BIG DATA</h2>
                 </div>
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
                     <h2 style="margin-left: 30px;color:red;">#TWITTER</h2>
