--- a/BigData1.html
+++ b/BigData1.html
@@ -42,11 +42,12 @@
     <link href="./css/md-preloader.min.css" rel="stylesheet" />
     <script src="./js/bootstrap-select.js"></script>
     <link href="./css/jquery-jvectormap-1.2.2.css" rel="stylesheet" />
+    <link href="./css/sweetalert.css" rel="stylesheet" />
     <script src="./js/jquery-jvectormap-it_regions-mill.js"></script>
     <script src="./js/Chart.bundle.js"></script>
     <script src="./js/jquery.knob.min.js"></script>
     <script src="./js/jquery.slimscroll.js"></script>
-    
+    <script src="./js/sweetalert.min.js"></script>   
     <style>
         article.qvobject {
             position: absolute;
@@ -134,27 +135,30 @@
     </section>-->
     <!--Parte con leftbar-->
     <!--#### RED NAVBAR ###-->
-    <nav class="navbar" style="height: 80px; background-color: gainsboro">
-        <div class="container-fluid">
+    <nav class="navbar" style="height: 80px; background-color: #F44336">
+        <!--<div class="container-fluid">-->
             <div class="navbar-header">
-                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-                    <img src="js/logo2.png" />
+                <div class="pull-right col-lg-4 col-md-4 col-sm-4 col-xs-4">
+                   <span class="pull-right">
+                       <img src="js/logo2.png" />
+                    </span> 
                 </div>
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-                    <h2 style="margin-left: 30px;color:red;">#BIG DATA</h2>
+                    <h2 style="margin-left: 30px;color:white;">#BIG DATA</h2>
                 </div>
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-                    <h2 style="margin-left: 30px;color:red;">#TWITTER</h2>
+                    <h2 style="margin-left: 30px;color:white;">#TWITTER</h2>
                 </div>
+                
                 <!--<a href="javascript:void(0);" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse" aria-expanded="false"></a>
                 <a href="javascript:void(0);" class="bars"></a>-->
             </div>
-        </div>
+        <!--</div>-->
     </nav>
 
     <!-- #### VERTICAL LEFT BAR #### -->
     <section>
-        <aside id="leftsidebar" class="sidebar" style="margin-top: 27px;">
+        <aside id="leftsidebar" class="sidebar">
             <!--<div class="user-info">
                 <div class="image">
                     <img src="js/Twitter_Logo.gif" width="80" height="80" alt="User" />
@@ -163,56 +167,59 @@
                     <div class="name">Happy Qlik</div>
                 </div>
             </div>-->
-            <div style="height: 160px;">
+            <div  class="leftbarStyle" >
                 <div class="image" style="margin-left: 10px; margin-top: 10px;">
                     <img src="js/Twitter_Logo.gif" width="80" height="80" />
                 </div>
                 <div class="info-container" style="margin-left: 10px;">
-                    <h3>Happy Qlik</h3>
+                    <h3 style="color: white;">Happy Qlik</h3>
                 </div>
             </div>
 
             <div class="menu">
                 <ul class="list">
                     <!-- ####PAGE SELECTION ####-->
-                    <li class="header">MAIN NAVIGATION</li>
-                    <li>
+                    <!--<li class="header">MAIN NAVIGATION</li>-->
+                    <li id="lisentiment" style="background-color: #e9e9e9">
                         <a href="BigData1.html">
-                            <span id="sentimentButton" style="color:red">SENTIMENT</span>
+                            <span id="sentimentButton" style="color:red; ">SENTIMENT</span>
                         </a>
                     </li>
-                    <li>
+                    <li id="li#tweet">
                         <a>
                             <span id="tweetButton"># TWEETS</span>
                         </a>
                     </li>
                     <!-- #### END OF PAGE SELECTION ####-->
                     <!-- ####GAUGE CHARTS ####-->
-                    <li class="header">INFO MAIN HASHTAG</li>
-                    <li>
-                        <div style="margin-left: 50px; margin-right: 50px; margin-top: 25px;">
-                            <input style="text-align:center;" type="text" class="knob" value="42" data-width="150" data-height="150" data-thickness="0.30" data-fgColor="rgb(255, 152, 0)" readonly>
-                            <!--<div id="first_gauge" class="graph gauge"></div>-->
-                        </div>
-                        <h4 style="color:#FF9800; text-align:center;">FIRSTTWEET</h4>
+                    <!--<li class="header">INFO MAIN HASHTAG</li>-->
+                    <li class="pull-right">
+                        <img id="infodialog" src="js/infoIcon.png" width="20" height="20"/>
                     </li>
                     <li>
-                        <div style="margin-left: 50px; margin-right: 50px; margin-top: 25px;">
-                            <input type="text" class="knob1" value="72" data-width="150" data-height="150" data-thickness="0.30" data-fgColor="rgb(255, 152, 0)" readonly>
+                        <div style="margin-left: 50px; margin-right: 50px; margin-top: 35px;">
+                            <input style="text-align:center;" type="text" class="knob" value="42" data-width="150" data-height="150" data-thickness="0.30" data-fgColor="#9C27B0" readonly>
+                            <!--<div id="first_gauge" class="graph gauge"></div>-->
                         </div>
-                        <h4 style="color:#FF9800; text-align:center;">SECONDTWEET</h4>
+                        <h4 style="text-align:center; color:#9C27B0">FIRSTTWEET</h4>
+                    </li>
+                    <li>
+                        <div style="margin-left: 50px; margin-right: 50px; margin-top: 35px;">
+                            <input type="text" class="knob1" value="72" data-width="150" data-height="150" data-thickness="0.30" data-fgColor="#03A9F4" readonly>
+                        </div>
+                        <h4 style="color:#03A9F4; text-align:center;">SECONDTWEET</h4>
                         <!--<div id="second_gauge" class="graph gauge"></div>-->
                     </li>
                     <li>
-                        <div style="margin-left: 50px; margin-right: 50px; margin-top: 25px;">
-                            <input type="text" class="knob2" value="18" data-width="150" data-height="150" data-thickness="0.30" data-fgColor="rgb(255, 152, 0)" readonly>
+                        <div style="margin-left: 50px; margin-right: 50px; margin-top: 35px;">
+                            <input type="text" class="knob2" value="18" data-width="150" data-height="150" data-thickness="0.30" data-fgColor="#8BC34A" readonly>
                         </div>
-                        <h4 style="color:#FF9800; text-align:center">THIRDTWEET</h4>
+                        <h4 style="color:#8BC34A; text-align:center">THIRDTWEET</h4>
                         <!--<div id="third_gauge" class="graph gauge"></div>-->
                     </li>
                     <li>
-                        <div style="margin-left: 50px; margin-right: 50px; margin-top: 25px;">
-                            <input type="text" class="knob1" value="72" data-width="150" data-height="150" data-thickness="0.30" data-fgColor="rgb(255, 152, 0)" readonly>
+                        <div style="margin-left: 50px; margin-right: 50px; margin-top: 35px;">
+                            <input type="text" class="knob1" value="72" data-width="150" data-height="150" data-thickness="0.30" data-fgColor="#FF9800" readonly>
                         </div>
                         <h4 style="color:#FF9800; text-align:center">FORTHTWEET</h4>
                         <!--<div id="forth_gauge" class="graph gauge"></div>-->
@@ -284,7 +291,7 @@
         <!--#### FIRST ROW WITH THE 4 INFO BOXES AT THE TOP ####-->
         <div class="row clearfix">
             <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-                <div class="info-box bg-red hover-expand-effect">
+                <div class="info-box bg-purple hover-expand-effect">
                     <div class="icon">
                         <!--<i class="material-icons">playlist_add_check</i>-->
                     </div>
@@ -295,7 +302,7 @@
                 </div>
             </div>
             <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-                <div class="info-box bg-cyan hover-expand-effect">
+                <div class="info-box bg-light-blue hover-expand-effect">
                     <div class="icon">
                         <!--<i class="material-icons">help</i>-->
                     </div>
@@ -387,7 +394,7 @@
             <!--#### LISTS ON THE RIGHTS ####-->
             <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
                 <div class="card" style="height:314px; overflow-y: auto;">
-                    <div class="body bg-cyan" style="height: 100%;">
+                    <div class="body bg-indigo" style="height: 100%;">
                         <div class="m-b--35 font-bold">LATEST SOCIAL TRENDS</div>
                         <ul class="dashboard-stat-list">
                             <li>
@@ -415,7 +422,7 @@
                     </div>
                 </div>
                 <div class="card" style="height:314px; overflow-y: auto; margin-top: 25px;">
-                    <div class="body bg-deep-purple"style="height: 100%;">
+                    <div class="body  bg-teal"style="height: 100%;">
                         <div class="m-b--35 font-bold">LATEST SOCIAL TRENDS</div>
                         <ul class="dashboard-stat-list">
                             <li>
@@ -443,7 +450,7 @@
                     </div>
                 </div>
                 <div class="card" style="height:314px; overflow-y: auto; margin-top: 25px;">
-                    <div class="body bg-deep-orange"style="height: 100%;">
+                    <div class="body bg-green"style="height: 100%;">
                         <div class="m-b--35 font-bold">LATEST SOCIAL TRENDS</div>
                         <ul class="dashboard-stat-list">
                             <li>
@@ -478,22 +485,22 @@
                 <!--<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6" style="padding-right: 7.5px;">-->
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                     <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
-                        <button type="button" class="btn bg-red btn-block btn-lg">LARGE</button>
+                        <button type="button" class="btn bg-deep-purple btn-block btn-lg">LARGE</button>
+                    </div>
+                    <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
+                        <button type="button" class="btn bg-purple btn-block btn-lg">LARGE</button>
+                    </div>
+                    <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
+                        <button type="button" class="btn bg-light-blue btn-block btn-lg">LARGE</button>
                     </div>
                     <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
                         <button type="button" class="btn bg-pink btn-block btn-lg">LARGE</button>
                     </div>
                     <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
-                        <button type="button" class="btn bg-pink btn-block btn-lg">LARGE</button>
+                        <button type="button" class="btn bg-deep-orange btn-block btn-lg">LARGE</button>
                     </div>
                     <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
-                        <button type="button" class="btn bg-pink btn-block btn-lg">LARGE</button>
-                    </div>
-                    <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
-                        <button type="button" class="btn bg-pink btn-block btn-lg">LARGE</button>
-                    </div>
-                    <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
-                        <button type="button" class="btn bg-pink btn-block btn-lg">LARGE</button>
+                        <button type="button" class="btn bg-orange btn-block btn-lg">LARGE</button>
                     </div>
                 </div>
                 <!--</div>-->
