Navbar color changed

--- a/BigData1.html
+++ b/BigData1.html
@@ -135,7 +135,7 @@
     </section>-->
     <!--Parte con leftbar-->
     <!--#### RED NAVBAR ###-->
-    <nav class="navbar" style="height: 80px; background-color: #F44336">
+    <nav class="navbar" style="height: 80px; background-color: #E10019">
         <!--<div class="container-fluid">-->
             <div class="navbar-header">
                 <div class="pull-right col-lg-4 col-md-4 col-sm-4 col-xs-4">
