--- a/BigData1.html
+++ b/BigData1.html
@@ -137,12 +137,12 @@
     <!--#### RED NAVBAR ###-->
     <nav class="navbar" style="height: 80px; background-color: #E10019">
         <!--<div class="container-fluid">-->
-            <div class="navbar-header">
-                <div class="pull-right col-lg-4 col-md-4 col-sm-4 col-xs-4">
-                   <span class="pull-right">
-                       <img src="js/logo2.png" />
-                    </span> 
-                </div>
+        <div class="pull-right col-lg-4 col-md-4 col-sm-4 col-xs-4">
+            <span class="pull-right">
+                <img src="js/logo2.png" />
+            </span>
+        </div>
+            <!--<div class="navbar-header">-->
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
                     <h2 style="margin-left: 30px;color:white;">#BIG DATA</h2>
                 </div>
@@ -152,7 +152,7 @@
                 
                 <!--<a href="javascript:void(0);" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse" aria-expanded="false"></a>
                 <a href="javascript:void(0);" class="bars"></a>-->
-            </div>
+            <!--</div>-->
         <!--</div>-->
     </nav>
 
